--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@tanstack/vue-query": "^5.64.1",
+    "@unovis/ts": "^1.5.0",
+    "@unovis/vue": "^1.5.0",
     "@vee-validate/zod": "^4.15.0",
-    "@vueuse/core": "^12.3.0",
+    "@vueuse/core": "^12.4.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
